# astel

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
astel/: crawler.py  options.py
changelog/: index.html
cli/: index.html
contributing/: index.html
docs/: Makefile  api.md  cli.md  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
installation/: index.html
naja/: __init__.py  agent.py  cli.py  crawler.py  errors.py  events.py  filters.py  limiters.py  options.py  parsers.py  protocols.py  setup.py
naja/filterers/: __init__.py  filters.py
search/: search_index.json
tests/: __init__.py  strategies.py  test_agent.py  test_cli.py  test_crawler.py  test_filters.py  test_limiters.py  test_naja.py  test_options.py  test_parsers.py
tests/test_filterers/: test_filters.py
usage/: index.html
